styles.css
* {
    margin: 0;
    border: 0;
    padding: 0;
    text-decoration: none;
}

#nav-container {
    position: fixed;
    top: 0;
    width: 100vw;
    background-color: black;
    height: 3vh;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: end;
}

.icon {
    height: 1.75vh;
}

#email-icon, #linkedin-logo {
    padding-left: 1.5vw;
}

nav {
    margin-left: 4vw;
    margin-right: 3.5vw;
}

#hamburger-button {
    background: transparent;
}

#hamburger-icon {
    color: #33FF33;
    height: 1.75vh;
    width: 1.75vh;
    display: flex;
}

.dropdown {
    position: relative;
}

.dropdown-menu {
    position: absolute;
    right: 0;
    top: calc(100% + .25em);
    background-color: black;
    box-shadow: 0 0 10px 0 rgba(51, 255, 51, 0.5);
    border-radius: 5%;
    opacity: 0;
    pointer-events: none;
    transition-delay: opacity 300ms ease-in, transform 150ms ease-in;
}

.dropdown > .link:focus + .dropdown-menu {
    opacity: 1;
    transform: translateY(0px);
    pointer-events: auto;
}

.information-grid {
    display: grid;
    grid-template-columns: repeat(2, max-content);
    gap: 2rem;
}

.dropdown-links {
    display: flex;
    flex-direction: column;
    gap: 2vh;
}

.link {
    color: #33FF33;
    font-size: 50px;
    font-family: sans-serif;
}

body {
    display: flex;
    flex-direction: column;
    background: linear-gradient(to top, #87CEEB 0%, black 66%, black 100%);
    width: 100vw;
    margin-top: 3vh;
}

#blank-space {
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin-top: 4vh;
    margin-bottom: 4vh;
}

#question-mark {
    font-size: 8vw;
    font-family: sans-serif;
    color: #33FF33;
}

#levels-grid {
    display: grid;
    grid-template-columns: auto, 1fr;
    grid-template-rows: repeat(13, 1fr);
    grid-row-gap: 6vh;
    height: 100%;
    margin-left: 2.5vw;
    margin-bottom: 8vh;
}

.level {
    display: grid;
    grid-template-columns: auto 1fr;
}

#level-node-js-container { grid-area: 1 / 1 / 2 / 3; }
#level-angular-container { grid-area: 2 / 1 / 3 / 3; }
#level-github-container { grid-area: 3 / 1 / 4 / 3; }
#level-git-container { grid-area: 4 / 1 / 5 / 3; }
#level-bash-container { grid-area: 5 / 1 / 6 / 3; }
#level-linux-container { grid-area: 6 / 1 / 7 / 3; }
#level-css-grid-container { grid-area: 7 / 1 / 8 / 3; }
#level-flexbox-container { grid-area: 8 / 1 / 9 / 3; }
#level-query-container { grid-area: 9 / 1 / 10 / 3; }
#level-css-container { grid-area: 10 / 1 / 11 / 3; }
#level-dom-container { grid-area: 11 / 1 / 12 / 3; }
#level-html-container { grid-area: 12 / 1 / 13 / 3; }
#level-js-container { grid-area: 13 / 1 / 14 / 3; }

.level-title {
    font-size: 4vw;
    font-family: sans-serif;
    color: #33FF33;
}

.level-line {
    border-bottom: 0.15vh solid #33FF33;
}

#rocket-container {
    position: absolute;
    bottom: -14vh;
    margin-left: 48vw;
}

#rocket-gif {
    height: 15vh;
}

@keyframes rocketAnimation {
    0% { bottom: -28vh; }
    100% { bottom: 52vh; }
}

#rocket-container.animated {
    animation: rocketAnimation 10s forwards;
}

footer {
    height: 3vh;
    width: 100vw;
    bottom: 0;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    background-color: black;
    color: #33FF33;
    font-family: sans-serif;
}

#copyright-container {
    margin-left: 3.5vw;
}

#nav-footer-container {
    width: 40vw;
    margin-right: 3.5vw;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: 1fr;
    grid-column-gap: 20px;
    grid-row-gap: 0px; 
    align-items: center;
    text-align: center;
}

#developer-footer-link {
    grid-area: 1 / 1 / 2 / 2;
    color: #33FF33;
}

#graphic-designer-footer-link {
    grid-area: 1 / 2 / 2 / 3;
    color: #33FF33;
}

#roadmap-footer-link {
    grid-area: 1 / 3 / 2 / 4;
    color: #33FF33;
}

#practice-footer-link {
    grid-area: 1 / 4 / 2 / 5;
    color: #33FF33;
}

